# pyKellyMotion

./: README.md  communications.py  kelly_controller.py  main.py  parser.py  protocol.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
pykellymotion/: __init__.py  cli.py  communications.py  kelly_controller.py  parser.py  protocol.py
tests/: __init__.py  test_cli.py  test_parser.py  test_protocol.py
