[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pykellymotion"
version = "0.1.0"
description = "Python library and CLI for Kelly motor controllers"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Riley Porter", email = "riley@example.com"}
]
keywords = ["kelly", "motor", "controller", "bldc", "ev", "electric-vehicle", "serial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.7"
dependencies = [
    "pyserial>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
pykelly = "pykellymotion.cli:main"

[project.urls]
Homepage = "https://github.com/ril3y/pyKellyMotion"
Repository = "https://github.com/ril3y/pyKellyMotion"
Issues = "https://github.com/ril3y/pyKellyMotion/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pykellymotion*"]

[tool.ruff]
line-length = 100
target-version = "py37"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
